// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsPage should render a component when has data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Apps Management
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="searchTerm"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  App or Developer Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="companyName"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Company Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="id"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  App Id
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="registeredFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Registered From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="registeredTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Registered To
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="publicListedDateFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Publicly Listed From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="publicListedDateTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Publicly Listed To
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                In Public AppMarket
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Public
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Private
                  </span>
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Integration or AC Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Integration
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    AC App
                  </span>
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Publicly Listed
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Listed
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Development
                  </span>
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11"
        >
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-intent-primary el-button"
                type="button"
              >
                Download CSV
              </button>
            </div>
          </div>
        </div>
        <div
          class="el-mb11"
        >
          <h2
            class="el-subtitle"
          >
            Total Apps
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            1
          </p>
          <div
            class="el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="10"
          >
            <div
              class="el-table-headers-row"
            >
              <div
                class="el-table-header"
              >
                App Name
              </div>
              <div
                class="el-table-header"
              >
                AppId
              </div>
              <div
                class="el-table-header"
              >
                Summary
              </div>
              <div
                class="el-table-header"
              >
                Developer Name
              </div>
              <div
                class="el-table-header"
              >
                Listed
              </div>
              <div
                class="el-table-header"
              >
                Integration
              </div>
              <div
                class="el-table-header"
              >
                Featured
              </div>
              <div
                class="el-table-header"
              >
                Created
              </div>
              <div
                class="el-table-header"
              >
                Publicly Listed
              </div>
              <div
                class="el-table-header"
              >
                Public
              </div>
              <div
                class="el-table-header"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M17.9922 7.38861L19.5294 7.72278C19.8041 7.78259 20 8.02567 20 8.30673V11.6933C20 11.9743 19.8041 12.2174 19.5294 12.2772L17.9922 12.6114C17.8586 13.0206 17.693 13.4198 17.4976 13.8043L18.3485 15.128C18.5005 15.3645 18.4671 15.675 18.2684 15.8737L15.8737 18.2684C15.675 18.4673 15.3645 18.5005 15.128 18.3485L13.8043 17.4976C13.4198 17.693 13.0206 17.8586 12.6114 17.9922L12.2772 19.5294C12.2176 19.8041 11.9743 20 11.6933 20H8.30673C8.02567 20 7.78244 19.8041 7.72278 19.5294L7.38861 17.9922C6.97937 17.8586 6.5802 17.693 6.19568 17.4976L4.87198 18.3485C4.63547 18.5005 4.32495 18.4671 4.12628 18.2684L1.73157 15.8737C1.5329 15.675 1.49948 15.3645 1.65146 15.128L2.50244 13.8043C2.30698 13.4198 2.14142 13.0206 2.00775 12.6114L0.470581 12.2772C0.195923 12.2174 0 11.9743 0 11.6933V8.30673C0 8.02567 0.195923 7.78259 0.470581 7.72278L2.00775 7.38861C2.14142 6.97937 2.30698 6.5802 2.50244 6.19568L1.65146 4.87198C1.49948 4.63547 1.5329 4.32495 1.73157 4.12628L4.12628 1.73157C4.32495 1.5329 4.63547 1.49948 4.87198 1.65146L6.19568 2.50244C6.5802 2.30698 6.97937 2.14142 7.38861 2.00775L7.72278 0.470581C7.78244 0.195923 8.02567 0 8.30673 0H11.6933C11.9743 0 12.2176 0.195923 12.2772 0.470581L12.6114 2.00775C13.0206 2.14142 13.4198 2.30698 13.8043 2.50244L15.128 1.65146C15.3645 1.49948 15.675 1.5329 15.8737 1.73157L18.2684 4.12628C18.4671 4.32495 18.5005 4.63547 18.3485 4.87198L17.4976 6.19568C17.693 6.5802 17.8586 6.97937 17.9922 7.38861ZM17.3953 11.5179L18.8048 11.2115V8.78845L17.3952 8.48206C17.1786 8.43491 17.0061 8.27194 16.9466 8.05862C16.7915 7.50305 16.5689 6.96579 16.2843 6.46179C16.1754 6.26877 16.1823 6.03134 16.3022 5.84488L17.0825 4.63089L15.3691 2.91733L14.1551 3.69781C13.9687 3.8176 13.7312 3.82446 13.5382 3.71552C13.0342 3.43109 12.4969 3.20831 11.9414 3.05344C11.7281 2.99393 11.5651 2.8212 11.5179 2.60468L11.2115 1.19522H8.78845L8.48206 2.60468C8.43491 2.8212 8.27194 2.99393 8.05862 3.05344C7.50305 3.20831 6.96579 3.43109 6.46164 3.71552C6.26877 3.82446 6.03134 3.81775 5.84488 3.69781L4.63074 2.91733L2.91733 4.63089L3.69781 5.84488C3.81775 6.03134 3.82446 6.26877 3.71552 6.46179C3.43109 6.96579 3.20831 7.50305 3.05344 8.05862C2.99393 8.27194 2.8212 8.43491 2.60468 8.48206L1.19522 8.78845V11.2115L2.60483 11.5179C2.82135 11.5651 2.99393 11.7281 3.05344 11.9414C3.20847 12.4969 3.43124 13.0342 3.71567 13.5382C3.82462 13.7312 3.81775 13.9687 3.69781 14.1551L2.91748 15.3691L4.63089 17.0827L5.84488 16.3022C6.03134 16.1824 6.26877 16.1755 6.46179 16.2845C6.96579 16.5689 7.50305 16.7917 8.05862 16.9466C8.27194 17.0061 8.43491 17.1788 8.48206 17.3953L8.78845 18.8048H11.2115L11.5179 17.3953C11.5651 17.1788 11.7281 17.0061 11.9414 16.9466C12.4969 16.7917 13.0342 16.5689 13.5384 16.2845C13.7312 16.1755 13.9687 16.1823 14.1551 16.3022L15.3693 17.0827L17.0827 15.3691L16.3022 14.1551C16.1823 13.9687 16.1755 13.7312 16.2845 13.5382C16.5689 13.0342 16.7917 12.4969 16.9466 11.9414C17.0061 11.7281 17.1788 11.5651 17.3953 11.5179ZM5.21912 10C5.21912 7.36389 7.36389 5.21912 10 5.21912C12.6361 5.21912 14.7809 7.36389 14.7809 10C14.7809 12.6361 12.6361 14.7809 10 14.7809C7.36389 14.7809 5.21912 12.6361 5.21912 10ZM6.41434 10C6.41434 11.9771 8.02292 13.5857 10 13.5857C11.9771 13.5857 13.5857 11.9771 13.5857 10C13.5857 8.02292 11.9771 6.41434 10 6.41434C8.02292 6.41434 6.41434 8.02292 6.41434 10Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="el-table-row-container"
            >
              <div
                class="el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="App Name"
                  >
                    Reapit Insights
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="AppId"
                  >
                    f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Summary"
                  >
                    Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Developer Name"
                  >
                    Reapit Ltd Internal
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Listed"
                  >
                    <span
                      class="el-intent-success el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 12 12"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M11.2529 2.25459C10.9205 1.91513 10.3795 1.91515 10.0471 2.25457L4.03736 8.41347L1.45291 5.77405C1.12054 5.43458 0.579492 5.43467 0.247127 5.77403C-0.0823813 6.11051 -0.0823676 6.65391 0.24712 6.99041L3.43448 10.2455C3.76682 10.585 4.30815 10.5847 4.64026 10.2455L11.2529 3.47098C11.5824 3.13448 11.5823 2.59107 11.2529 2.25459Z"
                            fill="currentColor"
                          />
                        </g>
                        <defs>
                          <clippath
                            id="clip0"
                          >
                            <rect
                              fill="white"
                              height="1em"
                              width="1em"
                            />
                          </clippath>
                        </defs>
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Integration"
                  >
                    <span
                      class="el-intent-danger el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Featured"
                  >
                    <span
                      class="el-intent-danger el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Created"
                  >
                    04 Mar 2021 09:37
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Publicly Listed"
                  >
                    -
                  </div>
                </div>
                <div
                  class="el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Public"
                  >
                    <span
                      class="el-intent-danger el-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="el-table-expandable-row-trigger-cell"
                >
                  <span
                    class="el-intent-secondary el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 18 18"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row"
              >
                <div
                  class="el-table-expandable-container"
                >
                  <div
                    class="el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-secondary el-button"
                      >
                        View in AppMarket
                      </button>
                      <button
                        class="el-intent-secondary el-button"
                      >
                        View in DevPortal
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        Check AWS Only
                      </button>
                      <button
                        class="el-intent-danger el-button"
                        type="button"
                      >
                        Delete
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        Toggle Subscription
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        Togggle Featured
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 6L9 0V12L0 6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6L3 12V0L12 6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Apps Management
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                App or Developer Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Company Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="id"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                App Id
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Registered From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Registered To
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Publicly Listed From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Publicly Listed To
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              In Public AppMarket
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Public
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Private
                </span>
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Integration or AC Enabled
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Integration
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  AC App
                </span>
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Publicly Listed
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Listed
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Development
                </span>
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11"
      >
        <div
          class="el-button-group"
        >
          <div
            class="el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
              type="button"
            >
              Download CSV
            </button>
          </div>
        </div>
      </div>
      <div
        class="el-mb11"
      >
        <h2
          class="el-subtitle"
        >
          Total Apps
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          1
        </p>
        <div
          class="el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="10"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              App Name
            </div>
            <div
              class="el-table-header"
            >
              AppId
            </div>
            <div
              class="el-table-header"
            >
              Summary
            </div>
            <div
              class="el-table-header"
            >
              Developer Name
            </div>
            <div
              class="el-table-header"
            >
              Listed
            </div>
            <div
              class="el-table-header"
            >
              Integration
            </div>
            <div
              class="el-table-header"
            >
              Featured
            </div>
            <div
              class="el-table-header"
            >
              Created
            </div>
            <div
              class="el-table-header"
            >
              Publicly Listed
            </div>
            <div
              class="el-table-header"
            >
              Public
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M17.9922 7.38861L19.5294 7.72278C19.8041 7.78259 20 8.02567 20 8.30673V11.6933C20 11.9743 19.8041 12.2174 19.5294 12.2772L17.9922 12.6114C17.8586 13.0206 17.693 13.4198 17.4976 13.8043L18.3485 15.128C18.5005 15.3645 18.4671 15.675 18.2684 15.8737L15.8737 18.2684C15.675 18.4673 15.3645 18.5005 15.128 18.3485L13.8043 17.4976C13.4198 17.693 13.0206 17.8586 12.6114 17.9922L12.2772 19.5294C12.2176 19.8041 11.9743 20 11.6933 20H8.30673C8.02567 20 7.78244 19.8041 7.72278 19.5294L7.38861 17.9922C6.97937 17.8586 6.5802 17.693 6.19568 17.4976L4.87198 18.3485C4.63547 18.5005 4.32495 18.4671 4.12628 18.2684L1.73157 15.8737C1.5329 15.675 1.49948 15.3645 1.65146 15.128L2.50244 13.8043C2.30698 13.4198 2.14142 13.0206 2.00775 12.6114L0.470581 12.2772C0.195923 12.2174 0 11.9743 0 11.6933V8.30673C0 8.02567 0.195923 7.78259 0.470581 7.72278L2.00775 7.38861C2.14142 6.97937 2.30698 6.5802 2.50244 6.19568L1.65146 4.87198C1.49948 4.63547 1.5329 4.32495 1.73157 4.12628L4.12628 1.73157C4.32495 1.5329 4.63547 1.49948 4.87198 1.65146L6.19568 2.50244C6.5802 2.30698 6.97937 2.14142 7.38861 2.00775L7.72278 0.470581C7.78244 0.195923 8.02567 0 8.30673 0H11.6933C11.9743 0 12.2176 0.195923 12.2772 0.470581L12.6114 2.00775C13.0206 2.14142 13.4198 2.30698 13.8043 2.50244L15.128 1.65146C15.3645 1.49948 15.675 1.5329 15.8737 1.73157L18.2684 4.12628C18.4671 4.32495 18.5005 4.63547 18.3485 4.87198L17.4976 6.19568C17.693 6.5802 17.8586 6.97937 17.9922 7.38861ZM17.3953 11.5179L18.8048 11.2115V8.78845L17.3952 8.48206C17.1786 8.43491 17.0061 8.27194 16.9466 8.05862C16.7915 7.50305 16.5689 6.96579 16.2843 6.46179C16.1754 6.26877 16.1823 6.03134 16.3022 5.84488L17.0825 4.63089L15.3691 2.91733L14.1551 3.69781C13.9687 3.8176 13.7312 3.82446 13.5382 3.71552C13.0342 3.43109 12.4969 3.20831 11.9414 3.05344C11.7281 2.99393 11.5651 2.8212 11.5179 2.60468L11.2115 1.19522H8.78845L8.48206 2.60468C8.43491 2.8212 8.27194 2.99393 8.05862 3.05344C7.50305 3.20831 6.96579 3.43109 6.46164 3.71552C6.26877 3.82446 6.03134 3.81775 5.84488 3.69781L4.63074 2.91733L2.91733 4.63089L3.69781 5.84488C3.81775 6.03134 3.82446 6.26877 3.71552 6.46179C3.43109 6.96579 3.20831 7.50305 3.05344 8.05862C2.99393 8.27194 2.8212 8.43491 2.60468 8.48206L1.19522 8.78845V11.2115L2.60483 11.5179C2.82135 11.5651 2.99393 11.7281 3.05344 11.9414C3.20847 12.4969 3.43124 13.0342 3.71567 13.5382C3.82462 13.7312 3.81775 13.9687 3.69781 14.1551L2.91748 15.3691L4.63089 17.0827L5.84488 16.3022C6.03134 16.1824 6.26877 16.1755 6.46179 16.2845C6.96579 16.5689 7.50305 16.7917 8.05862 16.9466C8.27194 17.0061 8.43491 17.1788 8.48206 17.3953L8.78845 18.8048H11.2115L11.5179 17.3953C11.5651 17.1788 11.7281 17.0061 11.9414 16.9466C12.4969 16.7917 13.0342 16.5689 13.5384 16.2845C13.7312 16.1755 13.9687 16.1823 14.1551 16.3022L15.3693 17.0827L17.0827 15.3691L16.3022 14.1551C16.1823 13.9687 16.1755 13.7312 16.2845 13.5382C16.5689 13.0342 16.7917 12.4969 16.9466 11.9414C17.0061 11.7281 17.1788 11.5651 17.3953 11.5179ZM5.21912 10C5.21912 7.36389 7.36389 5.21912 10 5.21912C12.6361 5.21912 14.7809 7.36389 14.7809 10C14.7809 12.6361 12.6361 14.7809 10 14.7809C7.36389 14.7809 5.21912 12.6361 5.21912 10ZM6.41434 10C6.41434 11.9771 8.02292 13.5857 10 13.5857C11.9771 13.5857 13.5857 11.9771 13.5857 10C13.5857 8.02292 11.9771 6.41434 10 6.41434C8.02292 6.41434 6.41434 8.02292 6.41434 10Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="App Name"
                >
                  Reapit Insights
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="AppId"
                >
                  f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Summary"
                >
                  Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Developer Name"
                >
                  Reapit Ltd Internal
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Listed"
                >
                  <span
                    class="el-intent-success el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 12 12"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M11.2529 2.25459C10.9205 1.91513 10.3795 1.91515 10.0471 2.25457L4.03736 8.41347L1.45291 5.77405C1.12054 5.43458 0.579492 5.43467 0.247127 5.77403C-0.0823813 6.11051 -0.0823676 6.65391 0.24712 6.99041L3.43448 10.2455C3.76682 10.585 4.30815 10.5847 4.64026 10.2455L11.2529 3.47098C11.5824 3.13448 11.5823 2.59107 11.2529 2.25459Z"
                          fill="currentColor"
                        />
                      </g>
                      <defs>
                        <clippath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="1em"
                            width="1em"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Integration"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Featured"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Created"
                >
                  04 Mar 2021 09:37
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Publicly Listed"
                >
                  -
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Public"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M15.8336 17.2478C16.1265 17.5407 16.6014 17.5407 16.8943 17.2478C17.1872 16.955 17.1872 16.4801 16.8943 16.1872L10.7071 10L16.8943 3.81282C17.1872 3.51992 17.1872 3.04505 16.8943 2.75216C16.6014 2.45926 16.1265 2.45926 15.8336 2.75216L9.64643 8.93934L3.8128 3.10571C3.51991 2.81282 3.04503 2.81282 2.75214 3.10571C2.45925 3.3986 2.45925 3.87348 2.75214 4.16637L8.58577 10L2.75214 15.8336C2.45925 16.1265 2.45925 16.6014 2.75214 16.8943C3.04503 17.1872 3.51991 17.1872 3.8128 16.8943L9.64643 11.0607L15.8336 17.2478Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 18 18"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.00005 0C13.9627 0 18 4.03743 18 9C18 13.9627 13.9627 18 9.00005 18C4.03741 18 0 13.9626 0 9C0 4.03743 4.03741 0 9.00005 0ZM4.32346 7.20004L9 12.6001L13.6765 7.20004H4.32346Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                    >
                      View in AppMarket
                    </button>
                    <button
                      class="el-intent-secondary el-button"
                    >
                      View in DevPortal
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      Check AWS Only
                    </button>
                    <button
                      class="el-intent-danger el-button"
                      type="button"
                    >
                      Delete
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      Toggle Subscription
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      Togggle Featured
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 6L9 0V12L0 6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6L3 12V0L12 6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should render a component when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Apps Management
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="searchTerm"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  App or Developer Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="companyName"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Company Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="id"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  App Id
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="registeredFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Registered From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="registeredTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Registered To
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="publicListedDateFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Publicly Listed From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="publicListedDateTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Publicly Listed To
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                In Public AppMarket
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-public-all"
                  name="isPublic"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-public-true"
                  name="isPublic"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Public
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-public-false"
                  name="isPublic"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-public-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Private
                  </span>
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Integration or AC Enabled
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-integration-all"
                  name="isDirectApi"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-integration-true"
                  name="isDirectApi"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Integration
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-integration-false"
                  name="isDirectApi"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-integration-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    AC App
                  </span>
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Publicly Listed
              </label>
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              >
                <input
                  checked=""
                  class="el-toggle-radio"
                  id="option-listed-all"
                  name="isListed"
                  type="radio"
                  value=""
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-all"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    All
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-listed-true"
                  name="isListed"
                  type="radio"
                  value="true"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-true"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Listed
                  </span>
                </label>
                <input
                  class="el-toggle-radio"
                  id="option-listed-false"
                  name="isListed"
                  type="radio"
                  value="false"
                />
                <label
                  class="el-has-grey-bg el-toggle-radio-label"
                  for="option-listed-false"
                >
                  <span
                    class="el-toggle-radio-item"
                  >
                    Development
                  </span>
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Apps Management
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                App or Developer Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Company Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="id"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                App Id
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Registered From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Registered To
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Publicly Listed From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Publicly Listed To
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              In Public AppMarket
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Public
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-public-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Private
                </span>
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Integration or AC Enabled
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Integration
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-integration-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  AC App
                </span>
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Publicly Listed
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-all"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  All
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-true"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Listed
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-listed-false"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Development
                </span>
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
